force-app/main/default/objects/Contact/fields/PipelineID__c.field-meta.xml
<CustomField>
    <fullName>PipelineID__c</fullName>
    <externalId>true</externalId>
    <label>PipelineID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>