force-app/main/default/objects/Contact/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publisher</label>
    <type>Checkbox</type>
</CustomField>