force-app/main/default/objects/Contact/fields/Publisher_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publisher Opt In</label>
    <type>Checkbox</type>
</CustomField>