force-app/main/default/objects/Contact/fields/Request_a_Demo__c.field-meta.xml
<CustomField>
    <fullName>Request_a_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request a Demo? (Checkbox)</label>
    <type>Checkbox</type>
</CustomField>