force-app/main/default/objects/Contact/fields/Request_a_Demo_Demo_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Request_a_Demo_Demo_Request_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request a Demo? (Form)</label>
    <type>Checkbox</type>
</CustomField>