force-app/main/default/objects/Contact/fields/Request_a_Demo_Yes_No_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Request_a_Demo_Yes_No_Checkbox__c</fullName>
    <formula>IF( Request_a_Demo__c, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Request a Demo Yes/No (Checkbox)</label>
    <type>Text</type>
</CustomField>