force-app/main/default/objects/Contact/fields/Request_a_Demo_Yes_No_Form__c.field-meta.xml
<CustomField>
    <fullName>Request_a_Demo_Yes_No_Form__c</fullName>
    <formula>IF(Request_a_Demo_Demo_Request_Form__c, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Request a Demo Yes/No (Form)</label>
    <type>Text</type>
</CustomField>