force-app/main/default/objects/Contact/fields/Sansan_CI__CI_PersonId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_PersonId__c</fullName>
    <label>CI 人物 ID</label>
    <length>31</length>
    <type>Text</type>
</CustomField>