force-app/main/default/objects/Contact/fields/Sansan_CI__CI_SOC__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_SOC__c</fullName>
    <label>SOC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>