force-app/main/default/objects/Contact/fields/Sports_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sports_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sports Contact</label>
    <type>Checkbox</type>
</CustomField>