force-app/main/default/objects/Contact/fields/Sports_Persona__c.field-meta.xml
<CustomField>
    <fullName>Sports_Persona__c</fullName>
    <label>Sports Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sports_Persona</valueSetName>
    </valueSet>
</CustomField>