force-app/main/default/objects/Contact/fields/Sync_with_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Zendesk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when you need this contact to sync with Zendesk</description>
    <inlineHelpText>Check this box when you need this contact to sync with Zendesk</inlineHelpText>
    <label>Sync with Zendesk</label>
    <type>Checkbox</type>
</CustomField>