force-app/main/default/objects/Contact/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>SOP - 2400</description>
    <inlineHelpText>Tracks performance of a specific marketing campaign</inlineHelpText>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>