force-app/main/default/objects/Contact/fields/UTM_Keyword__c.field-meta.xml
<CustomField>
    <fullName>UTM_Keyword__c</fullName>
    <description>SOP-2400</description>
    <inlineHelpText>Tracks which keyword term a website visitor came from. This is specifically used for paid search ads</inlineHelpText>
    <label>UTM Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>