force-app/main/default/objects/Contact/recordTypes/Contact_Generic.recordType-meta.xml
<RecordType>
    <fullName>Contact_Generic</fullName>
    <active>true</active>
    <label>Contact</label>
</RecordType>