force-app/main/default/objects/Contact/validationRules/ContactOwnerChangeRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactOwnerChangeRestriction</fullName>
    <active>true</active>
    <description>Deactivated to allow the Sales Ads profile to edit contact ownership per request from Michael Moore on 9/12/2022</description>
    <errorConditionFormula>/* 00eU0000000J7n2 profile is Ad Sales */

AND (
 $User.Bypass_Opportunity_Validation__c = FALSE,
ISCHANGED ( OwnerId ),
PRIORVALUE ( OwnerId ) &lt;&gt; $User.Id ,
$User.ProfileId = &apos;00eU0000000J7n2&apos; ,
PRIORVALUE ( Owner_is_Active__c ) = TRUE
)</errorConditionFormula>
    <errorMessage>The current owner of the account is active, therefore you cannot change ownership. Contact a system administrator if you feel you received this in error.</errorMessage>
</ValidationRule>