force-app/main/default/objects/Contact/validationRules/Role_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Values</fullName>
    <active>false</active>
    <description>Please select &quot;Job Role&quot; and &quot;Functional Role&quot; if the Title is known and entered into that field within the Contact</description>
    <errorConditionFormula>NOT(ISBLANK(Title)) &amp;&amp; ISPICKVAL(Job_Role__c, &quot;&quot;) &amp;&amp; ISPICKVAL(Functional_Role__c, &quot;&quot;) &amp;&amp; (Sports_Contact__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Job_Role__c</errorDisplayField>
    <errorMessage>Please select Job Role and Functional Role if the Title is known and entered into that field within the Contact</errorMessage>
</ValidationRule>