force-app/main/default/objects/Contact/listViews/Active_Users_for_Mass_Contact_Email.listView-meta.xml
<ListView>
    <fullName>Active_Users_for_Mass_Contact_Email</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Active Users for Mass Contact Email</label>
</ListView>