force-app/main/default/objects/Contact/listViews/Boston_Cannes.listView-meta.xml
<ListView>
    <fullName>Boston_Cannes</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact_Generic</value>
    </filters>
    <filters>
        <field>Invite_to_2018_Cannes_Pool_Party__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invite to Boston Cannes</label>
</ListView>