force-app/main/default/objects/Contact/listViews/Core_Media_Contacts.listView-meta.xml
<ListView>
    <fullName>Core_Media_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>bwall</value>
    </filters>
    <label>Core Media Contacts</label>
</ListView>