force-app/main/default/objects/Contact/listViews/GumGum_Contacts.listView-meta.xml
<ListView>
    <fullName>GumGum_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>gumgum,playground</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Higgins</value>
    </filters>
    <filters>
        <field>No_longer_with_account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>GumGum Employee Contacts</label>
</ListView>