force-app/main/default/objects/Contact/listViews/July_4_Candy_Club.listView-meta.xml
<ListView>
    <fullName>July_4_Candy_Club</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>Direct_Mail__c</columns>
    <columns>Invite_to_2018_July_4_Candy_Club__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invite_to_2018_July_4_Candy_Club__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact_Generic</value>
    </filters>
    <label>Invite to July 4 Candy Club Recipients</label>
</ListView>