force-app/main/default/objects/Contact/listViews/Key_Account_Contact_Persona.listView-meta.xml
<ListView>
    <fullName>Key_Account_Contact_Persona</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Persona__c</columns>
    <columns>Job_Role__c</columns>
    <columns>Functional_Role__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sports_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>lbaxt</value>
    </filters>
    <label>Key Account Contact Persona</label>
</ListView>