force-app/main/default/objects/Contact/listViews/League_Contact_Cleanup.listView-meta.xml
<ListView>
    <fullName>League_Contact_Cleanup</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Persona__c</columns>
    <columns>Job_Role__c</columns>
    <columns>Functional_Role__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.EMAIL_BOUNCED_DATE</columns>
    <columns>CONTACT.EMAIL_BOUNCED_REASON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sports_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account.League__c</field>
        <operation>equals</operation>
        <value>MLS</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>League Contact Cleanup</label>
</ListView>