force-app/main/default/objects/Contact/listViews/Sports_Contacts_in_Non_Sports_Accounts.listView-meta.xml
<ListView>
    <fullName>Sports_Contacts_in_Non_Sports_Accounts</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.Account_Owner_Role__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>Date_Moved_to_MQL__c</columns>
    <columns>Sports_Contact__c</columns>
    <columns>Marketing_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Account.Sports</value>
    </filters>
    <filters>
        <field>Contact_Owner_Role__c</field>
        <operation>contains</operation>
        <value>Sports</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bayli</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Marketing_Tag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sports Contacts in Non-Sports Accounts</label>
</ListView>