force-app/main/default/objects/Contact/listViews/X2022_Q4_Playground_Event_Battle_of_the.listView-meta.xml
<ListView>
    <fullName>X2022_Q4_Playground_Event_Battle_of_the</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Record_Type_ID__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>First_Marketing_Campaign__c</field>
        <operation>equals</operation>
        <value>2022 Q4 Playground Event - Battle of the media DJs</value>
    </filters>
    <label>2022 Q4 Playground Campaign Contacts-Onl</label>
</ListView>